--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,7 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+
 body {
   width: 400px;
   margin: 0 auto;
-  font-family: serif;
+  font-family: 'Tinos', serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 nav ul {
