Blog not appearing issue solved.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,40 +1,122 @@
-@import url('https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Balthazar&display=swap');
 
-
-body {
-  width: 400px;
-  margin: 0 auto;
-  font-family: 'Tinos', serif;
-  font-weight: 400;
-  font-style: normal;
+* {
+  box-sizing: border-box;
 }
 
-nav ul {
-  list-style: none;
-  padding: 3px 5px;
-  background: #111;
+body {
+  font-family: "Balthazar", serif;
+  padding: 0;
+  background: #f1f1f1;
+  margin: 0;
+}
 
-  a {
-    color: #fff;
-    text-decoration: none;
+nav {
+  margin: 0;
+  padding: 0;
 
-    &:hover {
-      text-decoration: underline;
+  ul {
+    list-style: none;
+    font-size: 46px;
+    padding: 3px 5px;
+    background: #111;
+    display: flex;
+    justify-content: center;
+    gap: 10%;
+    margin: 0;
+
+    li {
+      display: inline;
+      margin: 0;
+      padding: 0;
+    }
+
+    a {
+      color: #fff;
+      text-decoration: none;
+
+      &:hover {
+        color: #ff00ea;
+      }
     }
   }
+}
 
-  li {
-    display: inline;
+.header {
+  font-size: 40px;
+  text-align: center;
+  background: white;
+}
+
+.row {
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+
+  // Stack columns on small screens
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
+  }
+}
+
+.leftcolumn {
+  flex: 3;
+}
+
+.rightcolumn {
+  flex: 1;
+}
+
+.card {
+  background-color: white;
+  padding: 15px;
+  margin-bottom: 20px;
+  box-shadow: 0 0 5px #0000001a;
+  border-radius: 4px;
+}
+
+.card h2 {
+  margin: 0 0 5px 0;
+  line-height: 1.2;
+}
+
+.card h5 {
+  margin: 0 0 10px 0;
+  font-weight: normal;
+  color: #666;
+  font-size: 0.9em;
+  line-height: 1.2;
+}
+
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  height: 200px;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.2rem;
+
+  // Smaller height for about me image
+  &.small {
+    height: 100px;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 4px;
   }
 }
 
 footer {
-  background: #f2f2f2;
-  padding: 2px 2px;
   font-size: .7em;
   text-align: center;
-}
-
-#map {
-  height: 300px;
+  padding: 20px;
+  background: #ddd;
+  margin-top: 20px;
 }
