--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,6 +2,6 @@
  <!-- No footer here! -->
 {{ else }}
     <footer>
-        Website made by {{ .Site.Params.name }} in {{ now.Year }}
+        © {{ .Site.Params.name }} {{ now.Year }}
     </footer>
 {{ end }}
