--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
     <h1>My posts</h1>
     <ul>
-        {{ range .Pages }}
+{{ range where .Site.RegularPages "Section" "posts" }}
         <ul>
             <a href="{{ .Permalink }}">{{ .Title }}</a> – {{ .Date.Format "2 January, 2006" }}
         </ul>        
-        {{ end }}
+{{ end }}
     </ul>
 {{ end }}
