--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   justify-content: space-between;
-  height: 100px;
+  height: 3rem;
   font-size: 14px;
   padding-top: 3rem;
   color: var(--bg);
