--- a/assets/sass/_navbar.scss
+++ b/assets/sass/_navbar.scss
@@ -1,24 +1,20 @@
 .navbar {
   display: flex;
-  align-items: center;
   justify-content: space-between;
   height: 70px;
-  top: 0;
   background-color: var(--bgSoft);
   padding: 0 30px;
   box-shadow: 0 2px 6px var(--shadow);
-  z-index: 100;
   border-radius: 6px;
 }
 
 .logo {
   display: flex;
   align-items: center;
-  gap: 12px;
-  font-weight: 700;
+  gap: 0.5rem;
+  font-weight: 800;
   font-size: 1.8rem;
   color: var(--text);
-  user-select: none;
 }
 
 .logo img {
@@ -37,10 +33,8 @@
 
 .links a {
   color: var(--text);
-  text-decoration: none;
   padding: 6px 8px;
   border-radius: 6px;
-  transition: background-color 0.25s ease, color 0.25s ease;
 }
 
 .links a:hover,
