--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,10 @@
 {{ define "main" }}
-<div class="single">
+<article class="single-post">
+  <header class="post-header">
     <h1>{{ .Title }}</h1>
+  </header>
+  <section class="post-content">
     {{ .Content }}
-</div>
+  </section>
+</article>
 {{ end }}
