--- a/assets/sass/_blog.scss
+++ b/assets/sass/_blog.scss
@@ -1,9 +1,10 @@
 .list {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 2rem;
-  padding: 5rem;
-  align-items: stretch;
+  padding: 2rem;
+  max-width: 1200px;
+  box-sizing: border-box;
 }
 
 .listItem {
@@ -14,6 +15,7 @@
   border-radius: 6px;
   overflow: hidden;
   height: 100%;
+  min-width: 18rem;
 }
 
 .listItemDesc {
@@ -32,9 +34,9 @@
 }
 
 .listItemTexts {
-  flex: 1;
   display: flex;
   flex-direction: column;
+  flex: 1;
 }
 
 .listItemImage {
@@ -46,7 +48,6 @@
 .listItemDetail {
   font-size: 0.875rem;
   color: var(--textSoft);
-  margin-top: auto;
 
   time {
     font-weight: bold;
