--- a/assets/sass/_home.scss
+++ b/assets/sass/_home.scss
@@ -41,15 +41,14 @@
     padding: 1rem;
     box-shadow: 0 2px 6px var(--shadow);
     border-radius: 6px;
+    margin-top: 2rem;
   }
 
   .post-card {
     display: flex;
-    gap: 1rem;
     align-items: flex-start;
 
     .post-image {
-      flex: 1;
       border-right: 2px solid #838383;
 
       img, .fakeimg {
