--- a/assets/sass/_tags.scss
+++ b/assets/sass/_tags.scss
@@ -4,10 +4,10 @@
 
 .tagHeaderCard {
   background: var(--bgSoft);
-  padding: 2rem;
-  margin: 1rem auto 2rem;
   text-align: center;
   border-radius: 6px;
+  margin-top: 2rem;
+  padding: 1rem;
 }
 
 .listItemTexts {
