--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -7,7 +7,7 @@
         <a href="/">Home</a>
         <a href="/posts/">Blog</a>
         <a href="/cheatsheet">Cheatsheet</a>
-        <a href="/Tags">Tags</a>
+        <a href="/tags">Tags</a>
         <a href="/about">About</a>
     </div>
     <div class="searchButton">
