--- a/assets/sass/_home.scss
+++ b/assets/sass/_home.scss
@@ -14,9 +14,11 @@
     margin: 0 auto;
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 1024px) {
     .row {
       flex-direction: column;
+      gap: 2rem;
+      padding: 0 1rem;
     }
 
     .leftcolumn {
@@ -33,6 +35,8 @@
       display: flex;
       flex-direction: column;
       gap: 1.5rem;
+      max-width: 100%;
+      margin: 0 auto;
     }
   }
 
