--- a/layouts/index.html
+++ b/layouts/index.html
@@ -40,10 +40,12 @@
                 <div class="fakeimg">Image</div>
                 <div class="fakeimg">Image</div>
             </section>
-
             <section class="card tip-me">
                 <h3>Tip Me</h3>
-                <p>Link to Ko-Fi, Patreon</p>
+                <p>Buy me arcane ingredients via Ko-Fi.</p>
+                <a href="https://ko-fi.com/themysterycultist" target="_blank" class="custom-kofi-button">
+                    Toss A Coin
+                </a>
             </section>
         </aside>
         </div>
