--- a/assets/sass/_posts.scss
+++ b/assets/sass/_posts.scss
@@ -25,3 +25,11 @@
   color: inherit;
   text-decoration: none;
 }
+
+.postCardLink {
+  display: block;
+}
+
+.listItem {
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
