Several changes and standardisations.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,13 +4,9 @@
 // Imports
 @import 'variables';
 @import 'resets';
-@import 'container';
+@import 'containers';
 @import 'navbar';
-@import 'posts';
 @import 'footer';
 @import 'error';
 @import 'viewport';
-@import 'home';
-@import 'blog';
-@import 'tags';
-@import 'single';
+@import 'cards';
