--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -10,7 +10,7 @@
       <p class="post-authors">By {{ delimit . ", " }}</p>
     {{ end }}
   </header>
-  <section class="post-content">
+  <section class="cardDescription">
     {{ .Content }}
   </section>
   {{ with .Params.tags }}
