--- a/assets/sass/_navbar.scss
+++ b/assets/sass/_navbar.scss
@@ -2,29 +2,25 @@
   display: flex;
   flex-wrap: wrap; 
   justify-content: space-between;
-  height: 70px;
   background-color: var(--bgSoft);
-  padding: 0 30px;
-  box-shadow: 0 2px 6px var(--shadow);
   border-radius: 6px;
-  gap: 10px;
+  gap: 1rem;
   height: auto;
-  padding: 10px 30px;  
+  padding: 1rem 2rem;  
 }
 
 .logo {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
   font-weight: 800;
-  font-size: 1.8rem;
+  font-size: 3rem;
   color: var(--text);
   flex-shrink: 0;
 }
 
 .logo img {
-  width: 40px;
-  height: 40px;
+  width: 3rem;
+  height: 3rem;
   object-fit: contain;
 }
 
@@ -40,7 +36,7 @@
 
 .links a {
   color: var(--text);
-  padding: 6px 8px;
+  padding: 0.5rem;
   border-radius: 6px;
 }
 
