--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,7 @@
   <header class="post-header">
     <h1>{{ .Title }}</h1>
   </header>
-  <section class="post-content">
+  <section class="cardDescription">
     {{ .Content }}
   </section>
 </article>
