--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
-<article class="single-post">
-  <header class="post-header">
+<article class="singlePost">
+  <header class="postHeader">
     <h1>{{ .Title }}</h1>
   </header>
   <section class="cardDescription">
