--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,8 @@
 {{ with .Params.hide_footer }}
  <!-- No footer here! -->
+ <div class="footer">
+    <a href="/">MysteryCultist </a>
+ </div>
 {{ else }}
     <div class="footer">
         <div class="footerLinks">
