--- a/assets/sass/_error.scss
+++ b/assets/sass/_error.scss
@@ -4,8 +4,8 @@
   justify-content: center;
   align-items: center;
   height: 50vh;
-  background-color: #000;
-  color: #fff;
+  background-color: var(--bg);
+  color: var(--offWhite);
 
   h1 {
     font-size: 8rem;
@@ -20,8 +20,8 @@
   a {
     display: inline-block;
     padding: 0.75rem 1.5rem;
-    background-color: #666;
-    color: #fff;
+    background-color: var(--bgSoft);
+    color: var(--offWhite);
     text-decoration: none;
     border-radius: 4px;
     
