--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,14 +1,18 @@
 :root {
   // Background colours
-  --bg: #383838;
-  --bgSoft: #c9c9c9;
-  --textHover: #800000;
+  --bg: #181818;
+  --bgSoft: #d6d4bc;
   --shadow: #11111111;
 
   // Text colours
   --text: #000000;
   --textSoft: #3a3a3a;
-  --textWhite: #e1e2d8;
+
+  // Fun colours
+  --offWhite: #e1e2d8;
+  --gold: #d4af37;
+  --parchment: #ebd5b3;
+  --blood: #800000;
 
   // Custom text
   .dateText {
@@ -17,10 +21,8 @@
   }
 
   h1, h2, h3, h4, h5, h6 {
-    margin-top: 1rem;
     margin-bottom: 0.5rem;
     font-weight: 700;
-    line-height: 1.2;
   }
 
   h1 {
