--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,3 +14,5 @@
         </div>
     </div>
 {{ end }}
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9640650020211451"crossorigin="anonymous"></script>
