--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -5,3 +5,5 @@
 {{ $styleMin := $style | resources.Minify }}
 <link rel="stylesheet" href="{{ $styleMin.Permalink }}">
 <link rel="icon" href="/favicon.ico" />
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9640650020211451" crossorigin="anonymous"></script>
